--- a/mewmont.Android/Properties/AndroidManifest.xml
+++ b/mewmont.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.mewmont">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
-	<application android:label="mewmont.Android"></application>
+	<application android:label="mewmont.Android" android:theme="@android:style/Theme.Material"></application>
 </manifest>
