--- a/mewmont/mewmont.csproj
+++ b/mewmont/mewmont.csproj
@@ -7,4 +7,10 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="RoomPage.xaml.cs">
+      <DependentUpon>RoomPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
