--- a/mewmont/mewmont.csproj
+++ b/mewmont/mewmont.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Net.WebSockets.Client" Version="4.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
+    <PackageReference Include="XLabs.Forms" Version="2.0.5782" />
+    <PackageReference Include="XLabs.Serialization" Version="2.0.5782" />
+    <PackageReference Include="XLabs.Serialization.JSON" Version="2.0.5782" />
+    <PackageReference Include="YoutubeExplode" Version="4.3.3" />
   </ItemGroup>
 
   <ItemGroup>
