--- a/mewmont/mewmont.csproj
+++ b/mewmont/mewmont.csproj
@@ -41,5 +41,8 @@
     <EmbeddedResource Update="Views\JoinStreamPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LoginPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
