--- a/mewmont.Android/mewmont.Android.csproj
+++ b/mewmont.Android/mewmont.Android.csproj
@@ -213,6 +213,7 @@
     <AndroidResource Include="Resources\drawable\streamr_bg.png" />
     <AndroidResource Include="Resources\drawable\streamr_logo.png" />
     <AndroidResource Include="Resources\drawable\vid_btm_pv.png" />
+    <AndroidResource Include="Resources\drawable\login_bg.png" />
     <Content Include="VidyoClient-AndroidSDK\readme_vidyoclient_android.html" />
     <Content Include="VidyoClient-AndroidSDK\samples\VidyoConnector\android\app\src\main\AndroidManifest.xml" />
     <Content Include="VidyoClient-AndroidSDK\samples\VidyoConnector\android\app\src\main\java\com\vidyo\vidyoconnector\IVideoFrameListener.java" />
