Broken Vidyo.io stuff is in, but at least still works as it did before

--- a/mewmont.Android/mewmont.Android.csproj
+++ b/mewmont.Android/mewmont.Android.csproj
@@ -156,6 +156,7 @@
     <Compile Include="VidyoClient-AndroidSDK\include\csharp\VideoFrame.cs" />
     <Compile Include="VidyoClient-AndroidSDK\include\csharp\VirtualDeviceManager.cs" />
     <Compile Include="VidyoClient-AndroidSDK\include\csharp\VirtualShareManager.cs" />
+    <Compile Include="VidyoController.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\fa-regular-400.ttf" />
