--- a/mewmont/mewmont.csproj
+++ b/mewmont/mewmont.csproj
@@ -39,6 +39,9 @@
     <EmbeddedResource Update="Pages\RoomSettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\VidyoPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\JoinStreamPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
